<resources>
    <string name="app_name">Budget app</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_record">AddRecordActivity</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="note">note</string>
    <string name="_0_0">0.0</string>
    <string name="note_hint">Note:</string>
    <string name="amount_hint">Amount:</string>
    <string name="set_date">Change date</string>
    <string name="category">Category:</string>
    <string name="new_category">New category</string>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="type_array">
        <item name="expense">Expense</item>
        <item name="income">Income</item>
    </string-array>

    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="name">Name:</string>
    <string name="icon">Icon:</string>
    <string name="expense">Expense</string>
</resources>
